cmake_minimum_required(VERSION 3.15)
project(Array)
project(Stack)
project(LinkedList)
project(Queue)
project(Test)
set(CMAKE_C_STANDARD 11)

add_executable(Array Basic.h Array.c)
add_executable(Stack Basic.h Stack.c)
add_executable(LinkedList Basic.h LinkedList.c)
add_executable(Queue Basic.h Queue.c)
add_executable(Test Test.c)